--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
-.header-font-family, h1, h2, h3, h4, h5, h6 {
+.header-font-family, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'Roboto', sans-serif;
 }
 
