--- a/src/components/DemoPage/components/DemoPage.css
+++ b/src/components/DemoPage/components/DemoPage.css
@@ -1,24 +1,24 @@
-.App {
+.DemoPage {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.DemoPage-logo {
+  animation: DemoPage-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.DemoPage-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-intro {
+.DemoPage-intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes DemoPage-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
