--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-custom-variables";
+@import "~bootstrap/scss/bootstrap";
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
 .header-font-family, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
